--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* .content{
+    margin: 0 auto;
+    border: 3px solid #EFEFEF;
+    display: flex;
+    align-items: center;
+    width: 1000px;
+}
+
+.card{
+    margin: 10px;
+    padding: 10px;
+    border: 2px solid #EFEFEF;
+    width: 30%;
+}
+
+.card-img{
+    
+}
+
+.card-text{
+    font-size: 18px;
+    text-align: center;
+}
+
+img{
+    width: 150px;
+    height: 150px;
+    padding: 10px;
+}
+ */
