se agregar libreria chart.js

--- a/src/app/padre/padre.component.html
+++ b/src/app/padre/padre.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="caja">-->
 
-    <!-- <h5>El mensaje recibido desde el hijo es: {{mensajeRecibido}}</h5> -->
+    <h5>El mensaje recibido desde el hijo es: {{mensajeRecibido}}</h5>
     
     
     <!-- <p>Componente padre</p>
@@ -23,10 +23,10 @@
 <!-- </div> -->
 
 
-<!-- <app-hijo (mensajeDesdeHijo)="recibirMensaje($event)"></app-hijo> -->
+<app-hijo (mensajeDesdeHijo)="recibirMensaje($event)"></app-hijo>
 <!-- <app-hijo [recibeHijo] = "mensajePadre"> </app-hijo> -->
 
-<!--<app-hijo></app-hijo>-->
+<!-- <app-hijo ></app-hijo> -->
 <!-- <h1>Fecha de hoy: {{fecha | date: 'short'}}</h1>
 <h2>Dolar: {{dolar | currency}}</h2>
 <h1 appEstiloHermanos style="color: #000;">{{nombre | miPipePersonalizado}}</h1>
