--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* .content{
+.content{
     margin: 0 auto;
     border: 3px solid #EFEFEF;
     display: flex;
@@ -15,10 +15,6 @@
     width: 30%;
 }
 
-.card-img{
-    
-}
-
 .card-text{
     font-size: 18px;
     text-align: center;
@@ -29,4 +25,4 @@ img{
     height: 150px;
     padding: 10px;
 }
- */
+
