--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 
 
-<app-padre></app-padre>
+<!-- <app-padre></app-padre>
 <br>
 
-<app-hermano></app-hermano>
+<app-hermano></app-hermano> -->
+
+<app-performance-dashboard-component>
+    
+</app-performance-dashboard-component>
 
 <router-outlet></router-outlet>
