--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,6 @@ img{
     padding: 10px;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
