se agrega libreria swiper para creacion de carusel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
 
 <app-hermano></app-hermano> -->
 
-<app-performance-dashboard-component>
-    
-</app-performance-dashboard-component>
+<!-- <app-performance-dashboard-component></app-performance-dashboard-component> -->
+
+<app-carousel></app-carousel>
 
 <router-outlet></router-outlet>
