--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <app-hermano></app-hermano> -->
 
 <!-- <app-performance-dashboard-component></app-performance-dashboard-component> -->
-<app-mapa></app-mapa>
+<!-- <app-mapa></app-mapa> -->
 
 <!-- <app-carousel></app-carousel> -->
 
